add brand index

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+  "index": 2,
   "site-name": "279 for Change Campaign",
   "site-domain": "279project.xyz",
   "twitter-handle": "279projecthandle",
