add the demo domain as an alternate domain

--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
   "index": 2,
   "site-name": "279 for Change Campaign",
   "site-domain": "279project.xyz",
+  "alt-domains": ["demo279.then.fund"],
   "twitter-handle": "279projecthandle",
   "copyright": "279 for Change Campaign and Civic Responsibility, LLC"
 } 
