apply the actual domain name

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
   "index": 2,
   "site-name": "279 for Change Campaign",
-  "site-domain": "279project.xyz",
+  "site-domain": "www.279forchange.us",
   "alt-domains": ["demo279.then.fund"],
-  "twitter-handle": "279projecthandle",
+  "__twitter-handle": "279projecthandle",
   "copyright": "279 for Change Campaign and Civic Responsibility, LLC"
 } 
